[package]
name = "dbc-testing"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
parity-scale-codec = { workspace = true, features = ["std"] }
fs_extra = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
frame-system = { workspace = true, features = ["std"] }
dbc-executor = { path = "../executor" }
dbc-primitives = { path = "../primitives" }
dbc-runtime = { path = "../runtime" }
pallet-assets = { workspace = true, features = ["std"] }
pallet-asset-tx-payment = { workspace = true, features = ["std"] }
pallet-transaction-payment = { workspace = true, features = ["std"] }
sc-block-builder = { workspace = true }
sc-client-api = { workspace = true }
sc-client-db = { workspace = true, features = ["rocksdb"] }
sc-consensus = { workspace = true }
sc-executor = { workspace = true, features = ["std"] }
sc-service = { workspace = true, features = ["test-helpers", "rocksdb"] }
sp-api = { workspace = true, features = ["std"] }
sp-block-builder = { workspace = true, features = ["std"] }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-inherents = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true, features = ["std"] }
substrate-test-client = { workspace = true }
