[package]
name = "dbc-cli"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
log = { workspace = true }
codec = { workspace = true }

array-bytes = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
rand = { workspace = true }

coins-bip32 = { workspace = true }
coins-bip39 = { workspace = true }
k256 = { workspace = true }

# Substrate
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-asset-tx-payment = { workspace = true }
pallet-im-online = { workspace = true }
sc-authority-discovery = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-chain-spec = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-babe = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-consensus-slots = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-network-common = { workspace = true }
sc-network-sync = { workspace = true }
sc-rpc = { workspace = true }
sc-service = { workspace = true }
sc-storage-monitor = { workspace = true }
sc-sync-state-rpc = { workspace = true }
sc-sysinfo = { workspace = true }
sc-telemetry = { workspace = true }
sc-tracing = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }

sp-api = { workspace = true, features = ["std"] }
sp-authority-discovery = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true }
sp-runtime = { workspace = true, features = ["std"] }
sp-timestamp = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-wasm-interface = { workspace = true }
substrate-prometheus-endpoint = { workspace = true }

try-runtime-cli = { workspace = true }

fc-db = { workspace = true }
fc-mapping-sync = { workspace = true }
fc-rpc = { workspace = true }
fc-rpc-core = { workspace = true }
fp-evm = { workspace = true }
fp-rpc = { workspace = true }

pallet-assets = { path = "../../pallets/assets" }

dbc-rpc = { path = "../../rpc" }
dbc-primitives = { path = "../../primitives" }
dbc-runtime = { path = "../../runtime" }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
runtime-benchmarks = [
	"dbc-runtime/runtime-benchmarks",
]
try-runtime = [
	"dbc-runtime/try-runtime",
	"try-runtime-cli/try-runtime"
]
