[package]
name = "pallet-assets"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { workspace = true }
# Needed for type-safe access to storage DB.
frame-support = { workspace = true }
frame-benchmarking = { workspace = true }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { workspace = true }
sp-core = { workspace = true }

frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-std = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]

std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking/std"
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = [
        "frame-benchmarking/runtime-benchmarks",
        "frame-support/runtime-benchmarks",
]
