[package]
name = "pallet-collective"
version = "3.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "Collective system: Members of a set of account IDs can make their collective feelings known through dispatched calls from one of two specialized origins."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }

# Optional imports for benchmarking
[dependencies.frame-benchmarking]
default-features = false
optional = true
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sp-core'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dev-dependencies]
hex-literal = "0.3.1"

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-core/std",
	"sp-std/std",
	"serde",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"frame-system/std",
]
