[package]
authors = ["bobo <dongkaige@gmail.com>"]
edition = "2021"
name = "committee"
version = "0.1.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
dbc-support = { package = "dbc-support", path = "../support", default-features = false }
serde = { version = "1.0.101", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }

[dev-dependencies]
hex = { version = "0.4" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
# frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "serde",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "dbc-support/std",
]
