[package]
name = "committee"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
serde = { workspace = true , optional = true }
scale-info = { workspace = true }
dbc-support = { path = "../support", default-features = false }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# Optional imports for benchmarking
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
hex = { workspace = true }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
# frame-benchmarking = { workspace = true, features = ["std"] }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "parity-scale-codec/std",
  "serde",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-std/std",
  "dbc-support/std",
]
