[package]
name = "committee2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false, optional = true }

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking"]
std = [
  "codec/std",
  "serde",
  # "dbc-price-ocw/std",
  # "generic-func/std",
  "frame-support/std",
  "frame-system/std",
  # "pallet-collective/std",
  # "sp-runtime/std",
  # "sp-std/std",
  # "sp-io/std",
  # "dbc-support/std",
]
