[package]
edition = "2021"
name = "council-reward"
version = "0.1.0"
authors = ["bobo <dongkaige@gmail.com>"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.136", optional = true, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37" }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37" }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37" }
sp-keyring = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37" }

dbc-price-ocw = { package = "dbc-price-ocw", path = "../dbc-price-ocw" }
dbc-support = { package = "dbc-support", path = "../support", default-features = false }
generic-func = { package = "generic-func", path = "../generic-func", default-features = false }

[features]
default = ["std"]
std = [
  "frame-system/std",
  "frame-system/std",
  "pallet-collective/std",
  "dbc-support/std",
  "pallet-elections-phragmen/std",
  "sp-std/std",
  "sp-runtime/std",
  "serde",
]
