[package]
edition = "2021"
name = "council-reward"
version = "0.1.0"
authors = ["bobo <dongkaige@gmail.com>"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39", default-features = false }

dbc-support = { package = "dbc-support", path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
pallet-treasury = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.39" }

dbc-price-ocw = { package = "dbc-price-ocw", path = "../dbc-price-ocw" }
generic-func = { package = "generic-func", path = "../generic-func" }

[features]
default = ["std"]
std = [
  "frame-system/std",
  "frame-system/std",
  "pallet-collective/std",
  "dbc-support/std",
  "pallet-elections-phragmen/std",
  "sp-std/std",
  "sp-runtime/std",
]
