[package]
name = "council-reward"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-collective = { workspace = true }
pallet-elections-phragmen = { workspace = true }
sp-std = { workspace = true }

dbc-support = { package = "dbc-support", path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["std"] }
pallet-insecure-randomness-collective-flip = { workspace = true, features = ["std"] }
pallet-treasury = { workspace = true, features = ["std"] }
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-keyring = { workspace = true }

dbc-price-ocw = { package = "dbc-price-ocw", path = "../dbc-price-ocw" }
generic-func = { package = "generic-func", path = "../generic-func" }

[features]
default = ["std"]
std = [
  "frame-system/std",
  "frame-system/std",
  "pallet-collective/std",
  "dbc-support/std",
  "pallet-elections-phragmen/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
