[package]
authors = ["bobo <dongkaige@gmail.com>"]
edition = "2018"
name = "dbc-price-ocw"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
lite-json = {version = "0.1", default-features = false}
online-profile-machine = {package = "online-profile-machine", path = "../../traits/online-profile-machine", default-features = false}
serde = {version = "1.0.101", optional = true}
serde_json = {version = "1", default-features = false, features = ["alloc"]}

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
rev = '49a4103f4bfef55be20a5c6d26e18ff3003c3353'
version = '3.0.0'

[dependencies.generic-func]
default-features = false
package = 'generic-func'
path = '../generic-func'

[features]
default = ['std']
std = [
  'frame-support/std',
  'frame-system/std',
  "generic-func/std",
  'sp-core/std',
  "sp-io/std",
  "sp-std/std",
  "sp-runtime/std",
]
