[package]
authors = ["bobo <dongkaige@gmail.com>"]
edition = "2018"
name = "dbc-price-ocw"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
lite-json = { version = "0.1", default-features = false }
serde = { version = "1.0.101", optional = true }
serde_json = { version = "1", default-features = false, features = ["alloc"] }

frame-system = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", tag = "polkadot-v0.9.37", default-features = false }

dbc-support = { package = "dbc-support", path = "../support", default-features = false }
generic-func = { package = "generic-func", path = "../generic-func", default-features = false }

[features]
default = ["std"]
std = [
  "frame-support/std",
  "frame-system/std",
  "generic-func/std",
  "sp-core/std",
  "sp-io/std",
  "sp-std/std",
  "sp-runtime/std",
  "dbc-support/std",
]
